# streetcrime

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Specifiche del modello.docx  Thesis.code-workspace  ciccio.gpkg  model_vecchio.py  pyproject.toml  requirements.txt  requirements_conda.yml  setup.py  srcroads.gpkg
.github/workflows/: ci.yml
.roo/rules-code/: rules.md
data/: Database di Milano.qgz  uso edificio.txt
data/DBT_2020/DBT 2020 - SHAPE/: AATT.dbf  AATT.shx  AB_CDA.dbf  AB_CDA_AB_CDA_SUP.dbf  AB_CDA_AB_CDA_SUP.shx  AB_CDA_AB_CDA_SUP_SG.dbf  AB_CDA_AB_CDA_SUP_SR.dbf  AB_CDA_AB_CDA_SUP_SR.shx  AC_CIC.dbf  AC_CIC.shp  AC_CIC.shx  AC_CIC_AC_CIC_SUP_SR.dbf  AC_CIC_AC_CIC_SUP_SR.shx  AC_PED.dbf  AC_PED.shx  AC_PED_AC_PED_SUP_SR.dbf  AC_PED_AC_PED_SUP_SR.shx  AC_VEI.dbf  AC_VEI_AC_VEI_SUP_SR.dbf  AF_ACQ.dbf  ALBERO.dbf  ALVEO.dbf  ALVEO_A.dbf  ALVEO_ALVEO_SUP.dbf  ALVEO_ALVEO_SUP.shp  ALVEO_ALVEO_SUP_SR.dbf  ALVEO_ALVEO_SUP_SR.shp  ALVEO_ALVEO_SUP_SR.shx  ALVEO_A_ALVEO_A_SU.dbf  ARGINE.dbf  (+267 more)
data/processed/: EL_STR.dbf  EL_STR.shx  buildings.dbf  buildings.shp  buildings.shx  crimes.geojson  crimes_caldarini.gpkg  crimes_minecrime.gpkg  info_neighborhoods_all.csv  info_neighborhoods_all.gpkg  info_neighborhoods_caldarini.csv  info_neighborhoods_caldarini.gpkg  info_neighborhoods_minecrime_all.csv  info_neighborhoods_minecrime_all.gpkg  info_neighborhoods_minecrime_robbery.csv  info_neighborhoods_minecrime_robbery.gpkg  info_neighborhoods_minecrime_theft.csv  info_neighborhoods_minecrime_theft.gpkg  info_neighborhoods_simulated.csv  neighborhoods.dbf  neighborhoods.gpkg  neighborhoods.shp  neighborhoods.shx  public_transport.gpkg  roads.dbf  roads.shp  roads.shx
data/raw/: DCCV_DELITTIPS_09092023123836519.csv  aaaa.xlsx  data - collegamento.lnk  redditi_cap_milano.csv  redditi_cap_milano.xlsx  subway.geojson  tram.geojson  trolleybus.geojson
docs/api/: index.html  streetcrime.html
outputs/: _path_cache_result.pkl  analisi_veloce.xlsx  ciccio.xlsx  crimes.csv  crimes.xlsx  info_neighborhoods.csv  info_neighborhoods.xlsx  info_neighborhoods_xlsx.xlsx  path_cache_result.pkl  run.csv  run_agents.csv  run_agents_xlsx.xlsx  run_model.csv
outputs/plots/: crimes_minecrime_all_.eps
outputs/runs/: run_0f4434e2-d4a2-4b56-987b-e30d11535d92.pkl  run_24cf0aea-61e3-4101-a398-d4692c9aeb24.pkl  run_34021de6-2044-4f22-9d8c-f72e9522fa52.pkl  run_3417e2f8-7fea-4ec4-bf53-260e3b56248b.pkl  run_4ed7d55e-8dce-41c7-ad8b-90871f064c1b.pkl  run_c45a3171-73be-4ef4-b499-d763148cfe96.pkl  run_eab52f42-c969-4f30-8d4a-fb83eb248ec4.pkl  run_f1f63388-93e3-47a7-9f12-89f3283cda9c.pkl
outputs/tables/: empirical_validity.csv  info_long_runs.csv  info_neighborhoods_simulated.csv  neighborhoods.csv
scripts/: batch_run (to delete).py  data_processing_raw.py  deco_runs.py  requirements.txt  run.py
scripts/data_processing/: data_processing_outputs.py  data_processing_raw.py
scripts/data_processing_outputs/: outputs_analysis-FISSO.py  outputs_analysis.py
scripts/data_processing_raw/: data_processing_raw.c  data_processing_raw.cp311-win_amd64.pyd  data_processing_raw.py  data_processing_raw.pyx  main.py  real_crimes.py  setup.py
scripts/runs/: batch_run (ignore).py
src/: model.py  roads.gpkg  roads.graphml  test.py  utility.py
src.egg-info/: PKG-INFO  SOURCES.txt
src/agent/: criminal.py  geo_agents.py  informed_mover.py  mover.py  police_agent.py  resident.py  test.py  worker.py
src/agents/: criminal.py  informed_mover.py  mover.py  police_agent.py  resident.py  worker.py
src/data_processing/: crimes.py
src/model/: model.py
src/space/: building.py  city.py  road_network.py  road_network_original.py  test.py  utils.py
src/src.egg-info/: SOURCES.txt
src/streetcrime/: __init__.py  model.py
src/visualization/: server.py
src/visualization (not implemented)/: server.py
tests/: test_agents.py  test_city.py  test_model.py
tests/data/: extract_neighborhood.py
(+826 files in other folders)
